welcome bar alignment fixes

--- a/extensions/assets/connection/themes/default/css/connection.css
+++ b/extensions/assets/connection/themes/default/css/connection.css
@@ -150,3 +150,7 @@ h4 {
     font-size:18px;
     font-weight:700;
 }
+
+.conn-ovrd {
+    padding:0 !important;
+}
